@@ -5,12 +5,14 @@
     (import (rnrs)
 	    (only (sagittarius) format)
 	    (sagittarius control)
-	    (encoding sjis))
+	    (encoding sjis)
+	    (encoding euc-jp))
 
   (define *supported-encoding*
     `((iso-8859-1 . ,(latin-1-codec))
       (sjis       . ,(sjis-codec))
       (shift_jis  . ,(sjis-codec))
+      (euc-jp     . ,(euc-jp-codec))
       (latin-1    . ,(latin-1-codec))
       (utf-8      . ,(utf-8-codec))
       (utf-16     . ,(utf-16-codec))))
